add readme in  mellanox BlueField layer
Signed-off-by: Joseph Liu <kwliu@nuvoton.com>

--- a/openbmc/meta-bluewhale-npcm7xx/recipes-kernel/linux/linux-nuvoton/bluewhale-npcm7xx.cfg
+++ b/openbmc/meta-bluewhale-npcm7xx/recipes-kernel/linux/linux-nuvoton/bluewhale-npcm7xx.cfg
@@ -114,15 +114,20 @@ CONFIG_TCG_TPM=y
 CONFIG_TCG_TIS_I2C_INFINEON=y
 
 CONFIG_USB_NET_DRIVERS=y
-CONFIG_USB_MLX_RSHIM=y
+CONFIG_USB_MLX_RSHIM=m
 CONFIG_MFD_SYSCON=y
 CONFIG_MFD_MLXCPLD_BW=y
-CONFIG_IPMI_IPMB=y
+CONFIG_IPMI_IPMB=m
 CONFIG_IPMI_HANDLER=y
-CONFIG_IPMB_DEVICE_INTERFACE=y
+
+CONFIG_IPMB_DEVICE_INTERFACE=m
 
 CONFIG_VIRTIO_NET=y
 CONFIG_VIRTIO=y
 CONFIG_VIRTIO_MENU=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_PCI_LEGACY=y
+
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_BRIDGE_NETFILTER=m
